[WIP] fix(build): 配置 Pytest 以忽略 fixtures 目录
X-Quipu-Output-Tree: 5394a2d22040b2fe5b72938b690dcc7ca8334fa2

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -31,4 +31,5 @@ stitcher-cli = { workspace = true }
 [tool.pytest.ini_options]
 addopts = "-ra -q"
 testpaths = ["tests", "packages"]
+norecursedirs = ["tests/fixtures"]
 pythonpath = ["packages/stitcher-spec/src", "packages/stitcher-common/src", "packages/stitcher-scanner/src", "packages/stitcher-io/src", "packages/stitcher-config/src", "packages/stitcher-application/src", "packages/stitcher-cli/src"]
