[WIP] refactor: Enforce direct dependency on stitcher-needle
X-Quipu-Output-Tree: cf231b78d0e4e7d3618e3ed96ac0c925ddc15890

--- a/snapshot/packages/stitcher-application/pyproject.toml
+++ b/snapshot/packages/stitcher-application/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "stitcher-scanner",
     "stitcher-io",
     "stitcher-config",
+    "stitcher-needle",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -24,3 +25,4 @@ stitcher-common = { workspace = true }
 stitcher-scanner = { workspace = true }
 stitcher-io = { workspace = true }
 stitcher-config = { workspace = true }
+stitcher-needle = { workspace = true }
