--- a/snapshot/packages/stitcher-common/pyproject.toml
+++ b/snapshot/packages/stitcher-common/pyproject.toml
@@ -7,12 +7,7 @@ name = "stitcher-common"
 version = "0.1.0"
 description = "Common utilities and protocols for Stitcher."
 requires-python = ">=3.10"
-dependencies = [
-    "stitcher-needle",
-]
+dependencies = []
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/stitcher"]
-
-[tool.uv.sources]
-stitcher-needle = { workspace = true }
