[WIP] refactor: 引入 MockNeedle 测试工具以集中化 Mock 逻辑
X-Quipu-Output-Tree: f0b4d7bb18b23e9624d655331cc9f904720f9d31

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -18,7 +18,7 @@ dev = [
 ]
 
 [tool.uv.workspace]
-members = ["packages/*"]
+members = ["packages/*", "packages/stitcher-test-utils"]
 
 [tool.uv.sources]
 stitcher-spec = { workspace = true }
@@ -34,4 +34,4 @@ stitcher-needle = { workspace = true }
 addopts = "-ra --cov=stitcher --cov-report=term-missing"
 testpaths = ["tests", "packages"]
 norecursedirs = ["tests/fixtures"]
-pythonpath = ["packages/stitcher-spec/src", "packages/stitcher-common/src", "packages/stitcher-scanner/src", "packages/stitcher-io/src", "packages/stitcher-config/src", "packages/stitcher-application/src", "packages/stitcher-cli/src", "packages/stitcher-needle/src"]
+pythonpath = ["packages/stitcher-spec/src", "packages/stitcher-common/src", "packages/stitcher-scanner/src", "packages/stitcher-io/src", "packages/stitcher-config/src", "packages/stitcher-application/src", "packages/stitcher-cli/src", "packages/stitcher-needle/src", "packages/stitcher-test-utils/src"]
