chore: Bootstrap stitcher with its own documentation Capture: M test_document_io.json, M core.stitcher.yaml, M doc_manager.stitcher.yaml ... and 14 more files
X-Quipu-Output-Tree: ae709c4df2bff6c37e95161e01000b1d54f88119

--- a/snapshot/packages/stitcher-application/tests/test_doc_manager.stitcher.yaml
+++ b/snapshot/packages/stitcher-application/tests/test_doc_manager.stitcher.yaml
@@ -1,3 +1,11 @@
-sample_module_ir: "def func():\n    '''Func doc'''\n\nclass MyClass:\n    '''Class\
-  \ doc'''\n    attr: int\n    '''Attr doc'''\n\n    def method(self):\n        '''Method\
-  \ doc'''"
+sample_module_ir: |-
+  def func():
+      '''Func doc'''
+
+  class MyClass:
+      '''Class doc'''
+      attr: int
+      '''Attr doc'''
+
+      def method(self):
+          '''Method doc'''
