--- a/snapshot/packages/stitcher-common/src/stitcher/common/messaging/protocols.stitcher.yaml
+++ b/snapshot/packages/stitcher-common/src/stitcher/common/messaging/protocols.stitcher.yaml
@@ -1,6 +1,9 @@
-Renderer: 'Protocol for message renderers. A renderer''s only job is to
+Renderer: |-
+  Protocol for message renderers. A renderer's only job is to
+  present a final, formatted string to the user.
+Renderer.render: |-
+  Renders the message.
 
-  present a final, formatted string to the user.'
-Renderer.render: "Renders the message.\n\nArgs:\n    message: The fully resolved string\
-  \ to be displayed.\n    level: The log level (\"info\", \"warning\", \"error\",\
-  \ \"success\")."
+  Args:
+      message: The fully resolved string to be displayed.
+      level: The log level ("info", "warning", "error", "success").
