--- a/snapshot/packages/stitcher-needle/src/stitcher/needle/loader.stitcher.yaml
+++ b/snapshot/packages/stitcher-needle/src/stitcher/needle/loader.stitcher.yaml
@@ -1,4 +1,3 @@
-Loader.load_directory: 'Scans a directory for supported config files and merges their
-  top-level
-
-  keys into a single flat registry.'
+Loader.load_directory: |-
+  Scans a directory for supported config files and merges their top-level
+  keys into a single flat registry.
