--- a/snapshot/packages/stitcher-test-utils/src/stitcher/test_utils/needle.stitcher.yaml
+++ b/snapshot/packages/stitcher-test-utils/src/stitcher/test_utils/needle.stitcher.yaml
@@ -1,5 +1,8 @@
 MockNeedle: A test utility to mock the global `needle` runtime.
 MockNeedle._mock_get: The mock implementation of needle.get().
-MockNeedle.patch: "A context manager that patches the global needle's `get` method\n\
-  for the duration of the `with` block.\n\nArgs:\n    monkeypatch: The pytest monkeypatch\
-  \ fixture."
+MockNeedle.patch: |-
+  A context manager that patches the global needle's `get` method
+  for the duration of the `with` block.
+
+  Args:
+      monkeypatch: The pytest monkeypatch fixture.
