[WIP] chore: 配置 IDE 路径解析并忽略构建产物
X-Quipu-Output-Tree: b97c61509a9dadbe24cc1bb9a5a9d169e34a9803

--- a/snapshot/packages/stitcher-cli/pyproject.toml
+++ b/snapshot/packages/stitcher-cli/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "stitcher-application",
     "stitcher-needle",
-    "typer[all]",
+    "typer",
 ]
 
 [project.scripts]
