--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -40,3 +40,18 @@ pythonpath = ["packages/stitcher-spec/src", "packages/stitcher-common/src", "pac
 
 [tool.stitcher]
 scan_paths = ["packages"]
+
+[tool.pyright]
+include = ["packages", "tests"]
+# 显式告知 IDE 所有子包的源码位置，解决 Monorepo 解析问题
+extraPaths = [
+    "packages/stitcher-spec/src",
+    "packages/stitcher-common/src",
+    "packages/stitcher-scanner/src",
+    "packages/stitcher-io/src",
+    "packages/stitcher-config/src",
+    "packages/stitcher-application/src",
+    "packages/stitcher-cli/src",
+    "packages/stitcher-needle/src",
+    "packages/stitcher-test-utils/src",
+]
