--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -67,4 +67,25 @@ extraPaths = [
     "packages/stitcher-cli/src",
     "packages/stitcher-needle/src",
     "packages/stitcher-test-utils/src",
+    "packages/pyneedle-spec/src",
+    "packages/pyneedle-pointer/src",
+    "packages/pyneedle-nexus/src",
+    "packages/pyneedle/src",
+]
+
+[tool.pyrefly]
+extra_paths = [
+    "packages/stitcher-spec/src",
+    "packages/stitcher-common/src",
+    "packages/stitcher-scanner/src",
+    "packages/stitcher-io/src",
+    "packages/stitcher-config/src",
+    "packages/stitcher-application/src",
+    "packages/stitcher-cli/src",
+    "packages/stitcher-needle/src",
+    "packages/stitcher-test-utils/src",
+    "packages/pyneedle-spec/src",
+    "packages/pyneedle-pointer/src",
+    "packages/pyneedle-nexus/src",
+    "packages/pyneedle/src",
 ]
