refactor: migrate stitcher-needle to pyneedle ecosystem
This commit completes the migration of Stitcher's semantic addressing runtime
to the generic 'pyneedle' library suite, following DRY principles.

Key changes:
- Deleted 'packages/stitcher-needle' and updated all internal references.
- Established 'stitcher.common' as the composition root for core services.
- Refactored 'MessageBus' to use constructor injection for the Nexus instance,
  eliminating circular dependencies between 'common' and its sub-modules.
- Switched from global singletons to localized instances (stitcher_nexus, bus)
  controlled by the Stitcher application.
- Modernized test utilities: Renamed 'MockNeedle' to 'MockNexus' and
  fully embraced dependency injection in unit and integration tests.
- Cleaned up workspace configurations in pyproject.toml and pyrightconfig.json.

This architectural shift improves testability and decouples the Stitcher core
from the underlying pyneedle implementation details.

--- a/packages/stitcher-cli/pyproject.toml
+++ b/packages/stitcher-cli/pyproject.toml
@@ -9,7 +9,7 @@ description = "Command-line interface for Stitcher."
 requires-python = ">=3.10"
 dependencies = [
     "stitcher-application",
-    "stitcher-needle",
+    "pyneedle",
     "typer",
 ]
 
@@ -22,4 +22,4 @@ include = ["/src/stitcher/cli/assets"]
 
 [tool.uv.sources]
 stitcher-application = { workspace = true }
-stitcher-needle = { workspace = true }
+pyneedle = { workspace = true }
