--- a/packages/stitcher-application/pyproject.toml
+++ b/packages/stitcher-application/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "stitcher-scanner",
     "stitcher-io",
     "stitcher-config",
-    "stitcher-needle",
+    "pyneedle",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -25,4 +25,4 @@ stitcher-common = { workspace = true }
 stitcher-scanner = { workspace = true }
 stitcher-io = { workspace = true }
 stitcher-config = { workspace = true }
-stitcher-needle = { workspace = true }
+pyneedle = { workspace = true }
