[WIP] feat: 在 Stitcher 中实现中心化 Stub 生成功能
X-Quipu-Output-Tree: 47fabc93a5251f417ae7374a59456e121c261817

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -59,9 +59,11 @@ pythonpath = [
 
 [tool.stitcher]
 scan_paths = ["packages"]
+stub_path = "typings"
 
 [tool.pyright]
 include = ["packages", "tests"]
+stubPath = "typings"
 # 显式告知 IDE 所有子包的源码位置，解决 Monorepo 解析问题
 extraPaths = [
     "packages/stitcher-spec/src",
