[WIP] 对齐 pyrefly 的配置
X-Quipu-Output-Tree: b7619d53bb856c0f3cc1a719f3ca5d55806eeed7

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -81,9 +81,10 @@ extraPaths = [
 ]
 
 [tool.pyrefly]
+stubPath = "typings"
 extraPaths = [
     "packages/stitcher-spec/src",
-    "packages/stitcher-common/src",
+    "packages-stitcher-common/src",
     "packages/stitcher-scanner/src",
     "packages/stitcher-io/src",
     "packages/stitcher-config/src",
