refactor(build): Separate pyneedle facade from runtime implementation
The previous structure of the 'pyneedle' package (which contained `src/needle/__init__.py` and implementation code) caused a conflict: it was simultaneously acting as a regular package and attempting to import from its siblings in the `needle` namespace. This led to static analysis and runtime module resolution failures.

The solution implements the Facade pattern:

1. Renamed the original implementation package to `pyneedle-runtime`.
2. Converted `pyneedle-runtime` into a pure namespace package by deleting its `src/needle/__init__.py`.
3. Created a new `pyneedle` package, designated solely as the public API entry point.
4. Added `pkgutil.extend_path` to the new `pyneedle/src/needle/__init__.py` to ensure the Python runtime correctly discovers all modules contributing to the `needle` namespace across the workspace.
5. Updated path configurations in the root `pyproject.toml` accordingly.

s

s

--- a/packages/pyneedle-runtime/pyproject.toml
+++ b/packages/pyneedle-runtime/pyproject.toml
@@ -3,15 +3,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "pyneedle"
+name = "pyneedle-runtime"
 version = "0.1.0"
-description = "Batteries-included distribution of the PyNeedle runtime."
+description = "Core runtime for the PyNeedle ecosystem."
 requires-python = ">=3.10"
 dependencies = [
     "pyneedle-spec",
     "pyneedle-pointer",
     "pyneedle-nexus",
-    "pyneedle-runtime",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -21,4 +20,3 @@ packages = ["src/needle"]
 pyneedle-spec = { workspace = true }
 pyneedle-pointer = { workspace = true }
 pyneedle-nexus = { workspace = true }
-pyneedle-runtime = { workspace = true }
