--- a/packages/stitcher-application/src/stitcher/app/services/stub_package_manager.stitcher.yaml
+++ b/packages/stitcher-application/src/stitcher/app/services/stub_package_manager.stitcher.yaml
@@ -1,5 +1,7 @@
 "StubPackageManager": |-
   Manages the scaffolding of a PEP 561 stub package.
+"StubPackageManager._get_pep561_logical_path": |-
+  Converts a standard logical path to a PEP 561-compliant one for stubs.
 "StubPackageManager.scaffold": |-
   Creates the directory structure and pyproject.toml for a stub package.
 
