Capture: M doc_manager.py, M doc_manager.stitcher.yaml, M signature_manager.py ... and 1 more files
X-Quipu-Output-Tree: 1e7ce9d8c154caf50584ac481461b69a9194950c

--- a/snapshot/packages/stitcher-application/src/stitcher/app/services/doc_manager.stitcher.yaml
+++ b/snapshot/packages/stitcher-application/src/stitcher/app/services/doc_manager.stitcher.yaml
@@ -13,6 +13,10 @@
 "DocumentManager.check_module": |-
   Compares module structure against external docs.
   Returns a dict of issues: {'missing': set(...), 'extra': set(...), 'conflict': set(...)}
+"DocumentManager.compute_yaml_content_hash": |-
+  Computes the hash of a docstring content string.
+"DocumentManager.compute_yaml_content_hashes": |-
+  Computes hashes for each docstring in the corresponding YAML.
 "DocumentManager.flatten_module_docs": |-
   Converts a ModuleDef IR into a flat dictionary of docstrings.
   Keys are relative FQNs (e.g. "MyClass.method").
