feat(cli): implement interactive reconciliation mode for 'check' command
This commit introduces a comprehensive interactive "Reconciliation Wizard"
to resolve conflicts (Signature Drift and Co-evolution) during 'stitcher check'.

Key improvements:
- Decoupled application logic from UI via a new 'InteractionHandler' protocol.
- Implemented 'TyperInteractionHandler' with support for:
    - Single-key interaction (no Enter required for choices).
    - Undo support ('z' key) to revisit and change previous decisions.
    - Sticky defaults: the last choice becomes the default for next similar conflicts.
    - Recorded defaults: when going back via Undo, the already chosen action is shown as default.
- Redesigned 'StitcherApp.run_check' into a robust 4-phase model:
    1. Analysis: Scan all files for conflicts.
    2. Auto-Execution: Automatically reconcile doc improvements without user input.
    3. Decision: Use the handler to gather user decisions for all conflicts.
    4. Execution: Batch-apply all confirmed resolutions.
- Added '--non-interactive' flag to explicitly disable interactivity in TTY environments.
- Updated documentation and added i18n support for the new interactive features.

This major DX upgrade makes conflict resolution much more efficient and less error-prone for developers during large-scale refactorings.

--- a/packages/stitcher-cli/src/stitcher/cli/main.stitcher.yaml
+++ b/packages/stitcher-cli/src/stitcher/cli/main.stitcher.yaml
@@ -2,7 +2,9 @@
   Verify consistency between code and docs.
 
   Args:
-    update_signatures: Accept and update signature changes in the stored fingerprints.
+    force_relink: [Non-interactive] For 'Signature Drift' errors, forces relinking.
+    reconcile: [Non-interactive] For 'Co-evolution' errors, accepts both changes.
+    non_interactive: Force non-interactive mode, failing on unresolved conflicts.
 "eject": |-
   Inject docstrings from .stitcher.yaml files back into code.
 "generate": |-
