[WIP] 使代码库的文档与实现再次同步
X-Quipu-Output-Tree: ce272fe925e9f65ebc3f300aec5fefeea3ac05c1

--- a/snapshot/packages/stitcher-application/src/stitcher/app/handlers/noop_handler.stitcher.yaml
+++ b/snapshot/packages/stitcher-application/src/stitcher/app/handlers/noop_handler.stitcher.yaml
@@ -1,3 +1,5 @@
 "NoOpInteractionHandler": |-
   A non-interactive handler that resolves conflicts based on CLI flags.
   This preserves the original behavior for CI/CD environments.
+"NoOpInteractionHandler.process_interactive_session": |-
+  Processes a list of conflicts non-interactively based on the handler's configuration.
