--- a/packages/stitcher-application/src/stitcher/app/protocols.stitcher.yaml
+++ b/packages/stitcher-application/src/stitcher/app/protocols.stitcher.yaml
@@ -1,5 +1,11 @@
 "InteractionContext": |-
   Data packet passed to the handler to request a user decision.
+"InteractionContext.conflict_type": |-
+  The type of conflict detected.
+"InteractionContext.file_path": |-
+  The relative path to the file containing the conflict.
+"InteractionContext.fqn": |-
+  The fully qualified name of the symbol with the conflict.
 "InteractionHandler": |-
   Protocol for handling user interactions during a check.
 "InteractionHandler.process_interactive_session": |-
