--- a/packages/stitcher-cli/src/stitcher/cli/main.stitcher.yaml
+++ b/packages/stitcher-cli/src/stitcher/cli/main.stitcher.yaml
@@ -1,3 +1,5 @@
+"app": |-
+  The main Typer application instance for the CLI.
 "check": |-
   Verify consistency between code and docs.
 
@@ -5,22 +7,21 @@
     force_relink: [Non-interactive] For 'Signature Drift' errors, forces relinking.
     reconcile: [Non-interactive] For 'Co-evolution' errors, accepts both changes.
     non_interactive: Force non-interactive mode, failing on unresolved conflicts.
-"eject": |-
-  Inject docstrings from .stitcher.yaml files back into code.
-"generate": |-
-  Generate .pyi stubs based on pyproject.toml config.
-"app": |-
-  The main Typer application instance for the CLI.
 "cli_renderer": |-
   The CLI-specific renderer instance used by the message bus.
-"hydrate": |-
+"generate": |-
+  Generate .pyi stubs based on pyproject.toml config.
+"init": |-
+  Initialize Stitcher in the current project.
+"inject": |-
+  Inject docstrings from .stitcher.yaml files back into code.
+"pump": |-
   Extract new docstrings from source code and merge them into .stitcher.yaml.
 
   Args:
-    strip: If True, remove docstrings from source after successful hydration.
+    strip: If True, remove docstrings from source after successful pumping.
     force: If True, overwrite YAML with source docstrings on conflict.
     reconcile: If True, keep YAML docstrings on conflict.
-"init": |-
-  Initialize Stitcher in the current project.
+    non_interactive: Force non-interactive mode, failing on unresolved conflicts.
 "strip": |-
   Remove docstrings from source files.
