--- a/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
+++ b/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
@@ -44,6 +44,14 @@
   A list of methods defined in the class.
 "ClassDef.name": |-
   The name of the class.
+"ConflictType": |-
+  Enumeration of possible conflict types detected by `check`.
+"ConflictType.CO_EVOLUTION": |-
+  Both the code signature and the documentation content have changed.
+"ConflictType.DOC_CONTENT_CONFLICT": |-
+  The docstring content in the source code differs from the content in the YAML file.
+"ConflictType.SIGNATURE_DRIFT": |-
+  The code signature has changed, but the documentation content has not.
 "FunctionDef": |-
   Represents a function or method definition.
 "FunctionDef.args": |-
@@ -86,22 +94,6 @@
   A list of import statements found in the module.
 "ModuleDef.is_documentable": |-
   Checks if the module contains any content that would warrant a doc file.
-"ConflictType": |-
-  Enumeration of possible conflict types detected by `check`.
-"ConflictType.CO_EVOLUTION": |-
-  Both the code signature and the documentation content have changed.
-"ConflictType.SIGNATURE_DRIFT": |-
-  The code signature has changed, but the documentation content has not.
-"ResolutionAction": |-
-  Enumeration of actions a user can take to resolve a conflict.
-"ResolutionAction.ABORT": |-
-  Abort the entire operation.
-"ResolutionAction.RECONCILE": |-
-  Accept both the new signature and new documentation as the correct baseline.
-"ResolutionAction.RELINK": |-
-  Accept the new signature but keep the existing (unchanged) documentation.
-"ResolutionAction.SKIP": |-
-  Skip resolving this conflict for now.
 "Resolution": |-
   Represents a single, atomic resolution decision made by the user.
 "Resolution.action": |-
@@ -110,6 +102,20 @@
   The type of conflict that was detected.
 "Resolution.fqn": |-
   The fully qualified name of the symbol that has a conflict.
+"ResolutionAction": |-
+  Enumeration of actions a user can take to resolve a conflict.
+"ResolutionAction.ABORT": |-
+  Abort the entire operation.
+"ResolutionAction.HYDRATE_KEEP_EXISTING": |-
+  For doc content conflicts, keep the existing YAML content (YAML wins).
+"ResolutionAction.HYDRATE_OVERWRITE": |-
+  For doc content conflicts, overwrite the YAML with source code content (Code wins).
+"ResolutionAction.RECONCILE": |-
+  Accept both the new signature and new documentation as the correct baseline.
+"ResolutionAction.RELINK": |-
+  Accept the new signature but keep the existing (unchanged) documentation.
+"ResolutionAction.SKIP": |-
+  Skip resolving this conflict for now.
 "ResolutionPlan": |-
   A container for a list of resolution decisions, representing the complete plan
   to be executed.
