refactor(runtime): implement orthogonal three-layer loader architecture (v2)
Implements the Needle Runtime v2 architecture, which introduces a strict separation of concerns through an orthogonal three-layer model:

1. Primitive Layer: Atomic I/O operations (implemented via `fetch`).
2. Composition Layer: Vertical fallback logic (implemented in `OverlayNexus`).
3. Policy Layer: High-level business logic for language and identity fallback (implemented in the new `BaseLoader`).

Key changes:
- Updated `ResourceLoaderProtocol` to reflect the new `fetch` and `get` methods.
- Introduced `BaseLoader` in `pyneedle-nexus` to centralize fallback policies, ensuring consistency across all loaders.
- Refactored `MemoryLoader` and `FileSystemLoader` as primitive loaders.
- Refactored `OverlayNexus` to focus on vertical composition while inheriting policy logic from `BaseLoader`.

This refactoring fundamentally fixes the priority inversion issue where system-level default languages could accidentally override project-level specific languages.

s

doc: strip

s

--- a/packages/pyneedle-nexus/src/needle/nexus/nexus.stitcher.yaml
+++ b/packages/pyneedle-nexus/src/needle/nexus/nexus.stitcher.yaml
@@ -1,10 +1,7 @@
 "OverlayNexus": |-
-  Standard implementation of the Nexus protocol using a logical overlay strategy.
-
-  It manages an ordered list of resource loaders and uses `collections.ChainMap`
-  to create prioritized, logical views of resources without performing
-  a physical merge. It also implements the Loader protocol, allowing it to be
-  nested within other Nexus instances.
+  [Composition Layer]
+  Implements vertical fallback by iterating through a stack of loaders.
+  Inherits policy logic (get) from BaseLoader.
 "OverlayNexus.__init__": |-
   Initializes the Nexus with a list of loaders.
 
@@ -16,6 +13,9 @@
   Lazily loads and caches the ChainMap view for a given domain.
 "OverlayNexus._resolve_domain": |-
   Determines the current active domain based on environment variables and system settings.
+"OverlayNexus.fetch": |-
+  [Composition Layer Implementation]
+  Vertical Fallback: Ask each loader in order. First one to return non-None wins.
 "OverlayNexus.get": |-
   Resolves a semantic pointer to a string value with graceful fallback.
 "OverlayNexus.load": |-
