--- a/snapshot/packages/stitcher-cli/src/stitcher/cli/main.stitcher.yaml
+++ b/snapshot/packages/stitcher-cli/src/stitcher/cli/main.stitcher.yaml
@@ -15,6 +15,8 @@
   Initialize Stitcher in the current project.
 "inject": |-
   Inject docstrings from .stitcher.yaml files back into code.
+"main": |-
+  Stitcher CLI entry point.
 "pump": |-
   Extract new docstrings from source code and merge them into .stitcher.yaml.
 
