--- a/snapshot/packages/pyneedle-runtime/src/needle/loaders/fs_loader.stitcher.yaml
+++ b/snapshot/packages/pyneedle-runtime/src/needle/loaders/fs_loader.stitcher.yaml
@@ -5,8 +5,18 @@
   directories (`needle/` and `.stitcher/needle/`).
 "FileSystemLoader._load_directory": |-
   Recursively scans a directory and loads all supported files.
+"FileSystemLoader._scan_directory": |-
+  Scans a directory for supported files.
+  Returns a list of layers.
+  Note: The order of files within a directory is OS-dependent,
+  but we process them deterministically if needed.
+"FileSystemLoader._scan_directory_to_dict": |-
+  Scans a directory and merges all found files into a single dictionary.
+"FileSystemLoader._scan_root": |-
+  Scans the single root and returns a merged, flattened dictionary.
 "FileSystemLoader.add_root": |-
   Prepends a new search root, giving it highest priority.
 "FileSystemLoader.load": |-
-  Scans all roots for a given language and merges the found resources.
-  Later roots in the list override earlier ones.
+  Returns the aggregated view of the domain for this root.
+"FileSystemLoader.locate": |-
+  For a single-root loader, locate is deterministic.
