Capture: M base.json, M loaders.json, M nexus.json ... and 42 more files
X-Quipu-Output-Tree: d2a2307367b4849458abbc652265d0df80c83ed8

--- a/snapshot/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
+++ b/snapshot/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
@@ -64,6 +64,9 @@
   A list of decorators applied to the function.
 "FunctionDef.docstring": |-
   The docstring of the function.
+"FunctionDef.get_signature_string": |-
+  Reconstructs the function signature as a string.
+  Example: async def foo(a: int, b: str = 'default') -> bool:
 "FunctionDef.is_async": |-
   Flag indicating if the function is async.
 "FunctionDef.is_class": |-
