[WIP] refactor(core): 固化适配器架构并移除遗留代码
X-Quipu-Output-Tree: 681be6c4730ccef2c99553177c7139ab39122e57

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -32,10 +32,9 @@ pyneedle-pointer = { workspace = true }
 pyneedle-spec = { workspace = true }
 stitcher-spec = { workspace = true }
 stitcher-common = { workspace = true }
-stitcher-scanner = { workspace = true }
-stitcher-io = { workspace = true }
 stitcher-config = { workspace = true }
 stitcher-application = { workspace = true }
+stitcher-python-adapter = { workspace = true }
 stitcher-cli = { workspace = true }
 stitcher-test-utils = { workspace = true }
 
