[WIP] fix: Repair broken imports post-refactor
X-Quipu-Output-Tree: 8c4dc85237d76c08d2b250ae755159c03303da8a

--- a/snapshot/packages/stitcher-application/pyproject.toml
+++ b/snapshot/packages/stitcher-application/pyproject.toml
@@ -10,9 +10,8 @@ requires-python = ">=3.10"
 dependencies = [
     "stitcher-spec",
     "stitcher-common",
-    "stitcher-scanner",
-    "stitcher-io",
     "stitcher-config",
+    "stitcher-python-adapter",
     "pyneedle",
 ]
 
@@ -22,7 +21,6 @@ packages = ["src/stitcher"]
 [tool.uv.sources]
 stitcher-spec = { workspace = true }
 stitcher-common = { workspace = true }
-stitcher-scanner = { workspace = true }
-stitcher-io = { workspace = true }
 stitcher-config = { workspace = true }
+stitcher-python-adapter = { workspace = true }
 pyneedle = { workspace = true }
