--- a/snapshot/packages/pyneedle-spec/src/needle/spec/protocols.stitcher.yaml
+++ b/snapshot/packages/pyneedle-spec/src/needle/spec/protocols.stitcher.yaml
@@ -1,3 +1,9 @@
+"FileHandlerProtocol": |-
+  Protocol for file handlers that can parse specific formats like JSON, YAML, etc.
+"FileHandlerProtocol.load": |-
+  Parses the file and returns its content as a dictionary.
+"FileHandlerProtocol.match": |-
+  Returns True if this handler can process the given file path.
 "NexusProtocol": |-
   Defines the contract for the runtime central hub (Nexus).
 "NexusProtocol.reload": |-
@@ -6,6 +12,19 @@
   Args:
       domain: If provided, only reload that specific domain.
             If None, reload all.
+"OperatorProtocol": |-
+  The unified interface for all operators in the functional kernel.
+  
+  Unlike Loaders which mix configuration, policy, and fetching, 
+  Operators follow the "Builder is the Product" philosophy:
+  - __init__: Handles configuration (context injection).
+  - __call__: Handles execution (stateless transformation).
+"OperatorProtocol.__call__": |-
+  Executes the operator's logic.
+  
+  For Config Operators: key=str, returns Any.
+  For Factory Operators: key=SemanticPointer, returns Operator.
+  For Executor Operators: key=SemanticPointer, returns str.
 "PointerSetProtocol": |-
   Defines the contract for a set of Semantic Pointers (Ls).
 
