[WIP] feat: 阶段二 Part 2 - 适配 MessageBus 至 Operator 协议
X-Quipu-Output-Tree: fece3d937755e1a5886129f0387e64b96d167f0b

--- a/snapshot/packages/stitcher-common/src/stitcher/common/messaging/bus.stitcher.yaml
+++ b/snapshot/packages/stitcher-common/src/stitcher/common/messaging/bus.stitcher.yaml
@@ -1,7 +1,7 @@
 "MessageBus": |-
   Coordinates message resolution and rendering.
 "MessageBus.__init__": |-
-  Initializes the bus with a nexus instance for message lookup.
+  Initializes the bus with an operator (callable) for message lookup.
 "MessageBus.error": |-
   Sends an error-level message.
 "MessageBus.info": |-
