--- a/snapshot/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
+++ b/snapshot/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
@@ -1,6 +1,4 @@
 "bus": |-
   The global singleton MessageBus instance.
-"stitcher_loader": |-
-  The global singleton FileSystemLoader instance for Stitcher assets.
-"stitcher_nexus": |-
-  The global singleton OverlayNexus instance for Stitcher.
+"stitcher_operator": |-
+  The global singleton callable OverlayOperator instance for Stitcher.
