Capture: A operators.json, A dict_operator.json, A fs_operator.json ... and 23 more files
X-Quipu-Output-Tree: 2ee4fa672455cc540961f49ae498948930937d8f

--- a/snapshot/packages/pyneedle-runtime/src/needle/operators/dict_operator.stitcher.yaml
+++ b/snapshot/packages/pyneedle-runtime/src/needle/operators/dict_operator.stitcher.yaml
@@ -1,7 +1,6 @@
 "DictOperator": |-
-  A simple operator that wraps a dictionary.
-  Primarily used as a Config Operator to provide static configuration values
-  to the pipeline, or for mocking data in tests.
+  A Config Operator that provides values from an in-memory dictionary.
+  It automatically flavors (flattens) nested dictionaries upon initialization.
 "DictOperator.__call__": |-
   Retrieves a value from the dictionary using the string representation of the key.
 "DictOperator.__init__": |-
