--- a/snapshot/packages/pyneedle-nexus/src/needle/nexus/operators.stitcher.yaml
+++ b/snapshot/packages/pyneedle-nexus/src/needle/nexus/operators.stitcher.yaml
@@ -1,8 +1,6 @@
 "OverlayOperator": |-
-  A pure functional operator used to compose multiple operators vertically.
-  
-  Unlike `OverlayNexus`, it has no concept of 'domain', 'fallback', or 'cache'.
-  It simply tries each operator in the list until one returns a value.
+  A pure composition operator that delegates to a list of child operators.
+  It returns the first non-None result found.
 "OverlayOperator.__call__": |-
   Iterates through child operators and returns the first non-None result.
 "OverlayOperator.__init__": |-
