--- a/snapshot/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
+++ b/snapshot/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
@@ -1,4 +1,7 @@
 "bus": |-
   The global singleton MessageBus instance.
+"get_current_renderer": |-
+  Returns the OverlayOperator for the current configured language.
+  This implements the 'Lazy Pipeline Construction' pattern.
 "stitcher_operator": |-
   The global singleton callable OverlayOperator instance for Stitcher.
