--- a/packages/pyneedle-spec/src/needle/spec/protocols.stitcher.yaml
+++ b/packages/pyneedle-spec/src/needle/spec/protocols.stitcher.yaml
@@ -1,11 +1,13 @@
-"NexusProtocol": |-
-  Defines the contract for the runtime central hub (Nexus).
-"NexusProtocol.reload": |-
-  Clears internal caches and forces a reload of resources.
+"OperatorProtocol": |-
+  The unified interface for all operators (Config, Factory, Executor).
+  An operator is an object that is configured at initialization and
+  generates a result when called.
+"OperatorProtocol.__call__": |-
+  Executes the operator's logic.
 
-  Args:
-      domain: If provided, only reload that specific domain.
-            If None, reload all.
+  For Config Operators: key=str, returns Any.
+  For Factory Operators: key=SemanticPointer, returns Operator.
+  For Executor Operators: key=SemanticPointer, returns str or None.
 "PointerSetProtocol": |-
   Defines the contract for a set of Semantic Pointers (Ls).
 
@@ -21,16 +23,6 @@
 "PointerSetProtocol.__truediv__": |-
   Operator '/': Broadcasts the join operation to all members of the set.
   Example: {L.a, L.b} / "end" -> {L.a.end, L.b.end}
-"ResourceLoaderProtocol": |-
-  Defines the contract for loading raw resource data.
-"ResourceLoaderProtocol.load": |-
-  Loads resources for a specific domain.
-
-  Args:
-      domain: The target domain (e.g., 'en', 'zh', 'dark_theme').
-
-  Returns:
-      A dictionary mapping Fully Qualified Names (FQNs) to values.
 "SemanticPointerProtocol": |-
   Defines the contract for a Semantic Pointer (L).
 
@@ -57,9 +49,3 @@
   Example: L.auth / "login" -> L.auth.login
 "T_Pointer": |-
   A TypeVar used for covariant type hinting in the SemanticPointerProtocol.
-"WritableResourceLoaderProtocol": |-
-  Extends ResourceLoader with writing and location capabilities.
-"WritableResourceLoaderProtocol.locate": |-
-  Returns the physical path where a resource would be stored.
-"WritableResourceLoaderProtocol.put": |-
-  Persists a value for a specific pointer and domain.
