--- a/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
+++ b/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
@@ -1,6 +1,7 @@
 "bus": |-
   The global singleton MessageBus instance.
-"stitcher_loader": |-
-  The global singleton FileSystemLoader instance for Stitcher assets.
-"stitcher_nexus": |-
-  The global singleton OverlayNexus instance for Stitcher.
+"get_current_renderer": |-
+  Returns the OverlayOperator for the current configured language.
+  This implements the 'Lazy Pipeline Construction' pattern.
+"stitcher_operator": |-
+  The global singleton callable OverlayOperator instance for Stitcher.
