--- a/packages/stitcher-common/src/stitcher/common/messaging/bus.stitcher.yaml
+++ b/packages/stitcher-common/src/stitcher/common/messaging/bus.stitcher.yaml
@@ -2,6 +2,8 @@
   Coordinates message resolution and rendering.
 "MessageBus.__init__": |-
   Initializes the bus with an operator (callable) for message lookup.
+"MessageBus.debug": |-
+  Sends a debug-level message.
 "MessageBus.error": |-
   Sends an error-level message.
 "MessageBus.info": |-
