--- a/packages/stitcher-python-adapter/pyproject.toml
+++ b/packages/stitcher-python-adapter/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "stitcher-spec",
     "stitcher-common",
     "libcst",
+    "griffe",
 ]
 
 [tool.hatch.build.targets.wheel]
