[WIP] fix(docs): 同步 YAML 文档与当前代码库
X-Quipu-Output-Tree: 571f24dd32be26410ea90457100ff9b9fe876374

--- a/snapshot/packages/stitcher-test-utils/src/stitcher/test_utils/bus.stitcher.yaml
+++ b/snapshot/packages/stitcher-test-utils/src/stitcher/test_utils/bus.stitcher.yaml
@@ -11,6 +11,8 @@
   Returns all messages captured by the spy.
 "SpyRenderer": |-
   A renderer that captures structured message data.
+"SpyRenderer.messages": |-
+  A list of captured messages.
 "SpyRenderer.record": |-
   Records a semantic message call.
 "SpyRenderer.render": |-
