--- a/snapshot/packages/stitcher-cli/src/stitcher/cli/commands/check.stitcher.yaml
+++ b/snapshot/packages/stitcher-cli/src/stitcher/cli/commands/check.stitcher.yaml
@@ -5,3 +5,4 @@
     force_relink: [Non-interactive] For 'Signature Drift' errors, forces relinking.
     reconcile: [Non-interactive] For 'Co-evolution' errors, accepts both changes.
     non_interactive: Force non-interactive mode, failing on unresolved conflicts.
+    non_interactive: Force non-interactive mode, failing on unresolved conflicts.
