--- a/snapshot/packages/needle-stubs/pyproject.toml
+++ b/snapshot/packages/needle-stubs/pyproject.toml
@@ -11,5 +11,5 @@ description = "PEP 561 type stubs for needle"
 
 [tool.hatch.build.targets.wheel]
 packages = [
-    "src/needle-stubs",
+    "src/needle",
 ]
